# bevycraft

./: CHANGELOG.md  Cargo.toml  README.md
assets/shaders/: chunk.wgsl
src/: block.rs  keybinds.rs  main.rs  player.rs  temp.rs  ui.rs
src/chunk/: block.rs  face.rs  loader.rs  material.rs  mesh.rs  mod.rs
